Update lists at 20250830-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -926,6 +926,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -945,12 +946,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
+allow 23.191.200.27;
 allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -983,6 +984,7 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1791,6 +1793,7 @@ allow 5.2.79.190;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.111.72;
+allow 54.36.187.187;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1808,6 +1811,7 @@ allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
 allow 64.94.85.248;
+allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
 allow 66.94.111.228;
