--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -926,6 +926,7 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -945,12 +946,12 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.28;
+deny 23.191.200.27;
 deny 23.191.200.29;
-deny 23.191.200.3;
-deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
+deny 23.191.200.5;
+deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -983,6 +984,7 @@ deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::2000:34ff:fe4d:7faf;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -1791,6 +1793,7 @@ deny 5.2.79.190;
 deny 54.36.101.21;
 deny 54.36.108.162;
 deny 54.36.111.72;
+deny 54.36.187.187;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
@@ -1808,6 +1811,7 @@ deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
 deny 64.94.85.248;
+deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
 deny 66.94.111.228;
