--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -926,6 +926,7 @@ set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -945,12 +946,12 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -983,6 +984,7 @@ set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::2000:34ff:fe4d:7faf;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
@@ -1791,6 +1793,7 @@ set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.111.72;
+set_real_ip_from 54.36.187.187;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1808,6 +1811,7 @@ set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
 set_real_ip_from 64.94.85.248;
+set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.94.111.228;
