--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -224,7 +224,9 @@ allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
+allow 176.65.151.192;
 allow 176.65.151.193;
+allow 176.65.151.194;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -936,7 +938,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -944,9 +945,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.31;
-allow 23.191.200.4;
+allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.30;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1254,6 +1257,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1659,6 +1663,7 @@ allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
+allow 45.137.99.16;
 allow 45.137.99.182;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1762,6 +1767,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
