--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -224,7 +224,9 @@ set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
+set_real_ip_from 176.65.151.192;
 set_real_ip_from 176.65.151.193;
+set_real_ip_from 176.65.151.194;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
@@ -936,7 +938,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -944,9 +945,11 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1254,6 +1257,7 @@ set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1659,6 +1663,7 @@ set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
+set_real_ip_from 45.137.99.16;
 set_real_ip_from 45.137.99.182;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1762,6 +1767,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
