--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -303,7 +303,6 @@ deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.238.9;
 deny 185.183.157.214;
-deny 185.183.159.40;
 deny 185.191.204.254;
 deny 185.191.239.158;
 deny 185.191.239.49;
@@ -948,11 +947,11 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
-deny 23.191.200.28;
-deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
+deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1201,6 +1200,8 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:4f8:10a:2d23::2;
+deny 2a01:4f9:c010:a30b::1;
+deny 2a01:4f9:c013:f4f5::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1222,7 +1223,6 @@ deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
-deny 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 deny 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 deny 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 deny 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
@@ -1760,6 +1760,7 @@ deny 46.234.47.105;
 deny 46.250.243.29;
 deny 46.253.4.208;
 deny 46.38.243.210;
+deny 46.62.160.22;
 deny 5.101.82.22;
 deny 5.104.84.183;
 deny 5.104.86.6;
@@ -1814,6 +1815,7 @@ deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
 deny 64.94.85.248;
+deny 65.108.251.47;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
