--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -303,7 +303,6 @@ set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.238.9;
 set_real_ip_from 185.183.157.214;
-set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.158;
 set_real_ip_from 185.191.239.49;
@@ -948,11 +947,11 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1201,6 +1200,8 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4f8:10a:2d23::2;
+set_real_ip_from 2a01:4f9:c010:a30b::1;
+set_real_ip_from 2a01:4f9:c013:f4f5::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1222,7 +1223,6 @@ set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:15:928:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
-set_real_ip_from 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 set_real_ip_from 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 set_real_ip_from 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 set_real_ip_from 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
@@ -1760,6 +1760,7 @@ set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.38.243.210;
+set_real_ip_from 46.62.160.22;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
@@ -1814,6 +1815,7 @@ set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
 set_real_ip_from 64.94.85.248;
+set_real_ip_from 65.108.251.47;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
