--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -114,7 +114,6 @@ allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:d320:2202:5765::1;
@@ -409,7 +408,6 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -695,6 +693,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
+allow 2a11:6100:0:22:ae1f:6bff:fed5:ed08;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
