--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,6 +135,7 @@ allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
+allow 152.53.200.42;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
@@ -913,7 +914,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -922,9 +922,9 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.4;
+allow 23.191.200.30;
+allow 23.191.200.31;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1156,6 +1156,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
+allow 2a00:11c0:47:208d:4bf:76ff:fe2d:cee6;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
@@ -1770,7 +1771,6 @@ allow 5.2.79.190;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.111.72;
-allow 54.36.187.187;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
