--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -173,6 +173,7 @@ allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.186.73;
 allow 172.104.243.155;
+allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.105.203.121;
 allow 172.232.209.254;
@@ -200,6 +201,7 @@ allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.65.151.192;
 allow 176.65.151.193;
+allow 176.65.151.194;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -215,7 +217,6 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
-allow 178.218.144.99;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -587,6 +588,7 @@ allow 194.26.192.177;
 allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.160.220.38;
 allow 195.170.172.212;
 allow 195.176.3.23;
@@ -912,7 +914,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -920,9 +921,14 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -930,6 +936,7 @@ allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
+allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
 allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -948,6 +955,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1520,6 +1528,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:22:ae1f:6bff:fed5:ed08;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
@@ -1759,7 +1768,9 @@ allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.117.56;
 allow 5.255.118.151;
+allow 5.255.118.183;
 allow 5.255.118.218;
+allow 5.255.120.205;
 allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.125.196;
@@ -1801,6 +1812,7 @@ allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
