--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,7 +99,6 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.23.118.53;
-allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -180,6 +179,7 @@ allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.234.230.113;
+allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
@@ -266,7 +266,6 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
-allow 185.141.216.199;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -747,13 +746,11 @@ allow 2001:67c:e60:c0c:192:42:116:216;
 allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
-allow 2001:b011:4006:545c::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.182.99.129;
-allow 202.71.14.142;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -774,7 +771,6 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 206.166.251.193;
-allow 208.123.187.36;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -915,7 +911,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -924,6 +919,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -948,7 +944,6 @@ allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
-allow 2.57.241.211;
 allow 2.58.56.220;
 allow 2.58.56.224;
 allow 2.58.56.35;
@@ -1510,6 +1505,7 @@ allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
+allow 2a0f:85c1:356:2742::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:cdc6:500:11e3::2;
@@ -1608,6 +1604,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1637,7 +1634,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1692,6 +1688,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
 allow 45.38.20.153;
+allow 45.38.20.42;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.66.35.10;
