--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -108,7 +108,6 @@ deny 2001:67c:e60:c0c:192:42:116:216;
 deny 2001:67c:e60:c0c:192:42:116:217;
 deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
-deny 2001:b011:4006:545c::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
@@ -681,6 +680,7 @@ deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
+deny 2a0f:85c1:356:2742::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:cdc6:500:11e3::2;
