--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,6 +135,7 @@ allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
+allow 152.53.200.42;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
@@ -202,6 +203,7 @@ allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.65.151.192;
 allow 176.65.151.193;
+allow 176.65.151.194;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -611,7 +613,8 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.131;
+allow 196.196.200.100;
+allow 198.167.206.213;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -705,6 +708,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
 allow 2001:67c:e60:c0c:192:42:116:174;
 allow 2001:67c:e60:c0c:192:42:116:175;
@@ -787,6 +791,7 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
+allow 212.95.50.77;
 allow 212.95.54.78;
 allow 213.111.150.96;
 allow 216.239.90.19;
@@ -918,11 +923,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1157,6 +1159,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
+allow 2a00:11c0:47:208d:4bf:76ff:fe2d:cee6;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
@@ -1238,7 +1241,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1636,7 +1638,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1759,7 +1760,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1804,6 +1804,7 @@ allow 62.72.47.105;
 allow 64.190.113.221;
 allow 64.190.76.2;
 allow 64.190.76.3;
+allow 64.190.76.4;
 allow 64.94.85.248;
 allow 65.108.251.47;
 allow 66.146.193.33;
