--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -68,6 +68,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
+deny 2001:67c:e28:1::4;
 deny 2001:67c:e60:c0c:192:42:116:173;
 deny 2001:67c:e60:c0c:192:42:116:174;
 deny 2001:67c:e60:c0c:192:42:116:175;
@@ -331,6 +332,7 @@ deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
 deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
+deny 2a00:11c0:47:208d:4bf:76ff:fe2d:cee6;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
@@ -412,7 +414,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
