Update lists at 20250902-0301

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -42,6 +42,8 @@ allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
 allow 2001:67c:289c:4::80;
+allow 2001:67c:289c:4::81;
+allow 2001:67c:289c:4::82;
 allow 2001:67c:6ec:203:218:33ff:fe44:5513;
 allow 2001:67c:6ec:203:218:33ff:fe44:5514;
 allow 2001:67c:6ec:203:218:33ff:fe44:5515;
@@ -414,6 +416,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
