--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -171,6 +171,8 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
+allow 171.25.193.81;
+allow 171.25.193.82;
 allow 172.104.182.84;
 allow 172.104.186.73;
 allow 172.104.243.155;
@@ -213,6 +215,7 @@ allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
 allow 178.175.148.246;
+allow 178.17.58.159;
 allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
@@ -681,6 +684,8 @@ allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
 allow 2001:67c:289c:4::80;
+allow 2001:67c:289c:4::81;
+allow 2001:67c:289c:4::82;
 allow 2001:67c:6ec:203:218:33ff:fe44:5513;
 allow 2001:67c:6ec:203:218:33ff:fe44:5514;
 allow 2001:67c:6ec:203:218:33ff:fe44:5515;
@@ -913,6 +918,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -920,10 +926,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.31;
+allow 23.191.200.30;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1240,6 +1244,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1606,7 +1611,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1636,6 +1640,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1759,6 +1764,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1856,6 +1862,7 @@ allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 85.93.31.31;
+allow 86.11.246.178;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
