--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -271,6 +271,7 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
+allow 185.141.216.199;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -758,6 +759,7 @@ allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.182.99.129;
+allow 202.71.14.142;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -778,6 +780,7 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 206.166.251.193;
+allow 208.123.187.36;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -918,7 +921,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -927,8 +929,8 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -953,6 +955,7 @@ allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
+allow 2.57.241.211;
 allow 2.58.56.220;
 allow 2.58.56.224;
 allow 2.58.56.35;
@@ -1183,7 +1186,6 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f8:10a:2d23::2;
-allow 2a01:4f9:c013:f4f5::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1193,6 +1195,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4780:2d:c012::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1613,6 +1616,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1642,7 +1646,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1812,7 +1815,6 @@ allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
 allow 64.94.85.248;
-allow 65.108.251.47;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
@@ -1823,6 +1825,7 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
+allow 72.60.25.77;
 allow 74.208.79.7;
 allow 74.82.47.194;
 allow 77.48.28.193;
