--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -138,7 +138,6 @@ set_real_ip_from 150.129.10.139;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
-set_real_ip_from 152.53.200.42;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.205.129.174;
@@ -161,6 +160,7 @@ set_real_ip_from 164.132.58.8;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.131;
+set_real_ip_from 171.25.193.132;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
@@ -227,7 +227,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 179.35.1.246;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -289,6 +288,9 @@ set_real_ip_from 185.177.238.26;
 set_real_ip_from 185.177.238.9;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
+set_real_ip_from 185.191.127.110;
+set_real_ip_from 185.191.127.112;
+set_real_ip_from 185.191.127.113;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.158;
 set_real_ip_from 185.191.239.49;
@@ -459,7 +461,6 @@ set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
-set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
 set_real_ip_from 185.241.208.82;
@@ -632,7 +633,6 @@ set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
-set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -687,6 +687,7 @@ set_real_ip_from 2001:67c:289c:2::39;
 set_real_ip_from 2001:67c:289c:2::40;
 set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::131;
+set_real_ip_from 2001:67c:289c:4::132;
 set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
@@ -925,7 +926,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -933,12 +933,12 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -998,7 +998,6 @@ set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:253:2085:7b82:89a7:2145;
-set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -1171,7 +1170,6 @@ set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
-set_real_ip_from 2a00:11c0:47:208d:4bf:76ff:fe2d:cee6;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
@@ -1518,9 +1516,7 @@ set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:231b::1;
-set_real_ip_from 2a0f:85c1:356:2742::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
-set_real_ip_from 2a0f:85c1:356:5c50::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1580,18 +1576,14 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
-set_real_ip_from 2a12:a800:2:1:45:141:215:17;
-set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
 set_real_ip_from 2a12:a800:2:1:45:141:215:238;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
-set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
 set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
-set_real_ip_from 2a12:a800:2:1:45:141:215:80;
 set_real_ip_from 2a12:a800:2:1:45:141:215:88;
 set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
@@ -1618,7 +1610,6 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1648,6 +1639,7 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1660,8 +1652,6 @@ set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
-set_real_ip_from 45.134.225.142;
-set_real_ip_from 45.134.225.166;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.137.99.16;
@@ -1682,18 +1672,14 @@ set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.169;
-set_real_ip_from 45.141.215.17;
-set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.238;
 set_real_ip_from 45.141.215.28;
-set_real_ip_from 45.141.215.40;
 set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
-set_real_ip_from 45.141.215.80;
 set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
@@ -1703,8 +1689,6 @@ set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.123;
-set_real_ip_from 45.38.20.153;
-set_real_ip_from 45.38.20.42;
 set_real_ip_from 45.58.190.74;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.66.35.10;
@@ -1777,6 +1761,7 @@ set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.110.120;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.114.171;
+set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.151;
 set_real_ip_from 5.255.118.183;
@@ -1784,6 +1769,7 @@ set_real_ip_from 5.255.118.218;
 set_real_ip_from 5.255.120.205;
 set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
+set_real_ip_from 5.255.123.164;
 set_real_ip_from 5.255.125.196;
 set_real_ip_from 5.255.127.222;
 set_real_ip_from 5.255.97.221;
