Update lists at 20250903-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -215,7 +215,6 @@ allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
-allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
 allow 178.175.148.246;
@@ -795,7 +794,6 @@ allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
 allow 209.141.50.249;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.58.254;
@@ -934,12 +932,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1186,7 +1182,6 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
-allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
@@ -1522,6 +1517,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:38a0::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1613,7 +1609,6 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
-allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
@@ -1703,6 +1698,7 @@ allow 45.145.93.133;
 allow 45.154.98.33;
 allow 45.38.20.123;
 allow 45.38.20.153;
+allow 45.38.20.181;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.66.35.10;
@@ -1811,6 +1807,7 @@ allow 5.79.66.19;
 allow 5.8.18.30;
 allow 62.133.45.2;
 allow 62.171.137.169;
+allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.221;
 allow 64.190.76.2;
@@ -1879,7 +1876,6 @@ allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
 allow 88.151.192.2;
-allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
