--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -215,7 +215,6 @@ deny 177.93.140.66;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
-deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.148.209;
 deny 178.175.148.246;
@@ -795,7 +794,6 @@ deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
 deny 209.141.50.249;
-deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.55.26;
 deny 209.141.58.254;
@@ -934,12 +932,10 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
@@ -1186,7 +1182,6 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
-deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
@@ -1522,6 +1517,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:38a0::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
@@ -1613,7 +1609,6 @@ deny 2a12:a800:9:1:193:26:115:82;
 deny 2a12:a800:9:1:45:83:31:79;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
-deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
@@ -1703,6 +1698,7 @@ deny 45.145.93.133;
 deny 45.154.98.33;
 deny 45.38.20.123;
 deny 45.38.20.153;
+deny 45.38.20.181;
 deny 45.58.190.74;
 deny 45.61.185.172;
 deny 45.66.35.10;
@@ -1811,6 +1807,7 @@ deny 5.79.66.19;
 deny 5.8.18.30;
 deny 62.133.45.2;
 deny 62.171.137.169;
+deny 62.182.84.146;
 deny 62.72.47.105;
 deny 64.190.113.221;
 deny 64.190.76.2;
@@ -1879,7 +1876,6 @@ deny 87.118.122.51;
 deny 87.120.222.33;
 deny 87.120.254.132;
 deny 88.151.192.2;
-deny 88.151.194.24;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
