Update lists at 20250903-2101

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -155,7 +155,6 @@ allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
 allow 2604:2dc0:202:300::ed3;
-allow 2604:6600::4ee;
 allow 2604:a00:101:4:216:3eff:fe2f:1c84;
 allow 2604:a00:101:4:216:3eff:fe2f:20c3;
 allow 2604:b480:3:6::2;
@@ -333,6 +332,7 @@ allow 2620:18c:0:192::e0:224;
 allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
+allow 2800:ba0:6:c1::4858;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
@@ -424,8 +424,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:52c0:139:f7a5::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -698,7 +696,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
