--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,7 +134,6 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
-allow 150.129.10.139;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
@@ -508,6 +507,7 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.159.99.168;
@@ -596,7 +596,6 @@ allow 194.26.192.177;
 allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.87.55.98;
-allow 195.160.220.104;
 allow 195.160.221.37;
 allow 195.170.172.212;
 allow 195.176.3.23;
@@ -783,7 +782,6 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 206.166.251.193;
-allow 208.87.242.7;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -938,7 +936,6 @@ allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -990,7 +987,6 @@ allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
 allow 2604:2dc0:202:300::ed3;
-allow 2604:6600::4ee;
 allow 2604:a00:101:4:216:3eff:fe2f:1c84;
 allow 2604:a00:101:4:216:3eff:fe2f:20c3;
 allow 2604:b480:3:6::2;
@@ -1169,6 +1165,7 @@ allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
+allow 2800:ba0:6:c1::4858;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
@@ -1260,8 +1257,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:52c0:139:f7a5::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1534,7 +1529,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1631,6 +1625,7 @@ allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
+allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.60.232.250;
 allow 37.60.234.89;
@@ -1858,7 +1853,6 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
