--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -155,7 +155,6 @@ set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
 set_real_ip_from 2604:2dc0:202:300::ed3;
-set_real_ip_from 2604:6600::4ee;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:1c84;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:20c3;
 set_real_ip_from 2604:b480:3:6::2;
@@ -333,6 +332,7 @@ set_real_ip_from 2620:18c:0:192::e0:224;
 set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
+set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
@@ -424,8 +424,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:52c0:139:f7a5::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -698,7 +696,6 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
-set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:223;
 set_real_ip_from 2a12:a800:11:1:124:198:131:253;
