--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -142,6 +142,7 @@ allow 154.205.129.174;
 allow 154.26.159.157;
 allow 154.41.95.1;
 allow 154.41.95.2;
+allow 154.53.58.161;
 allow 158.174.210.51;
 allow 160.119.249.240;
 allow 160.187.148.71;
@@ -926,10 +927,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1052,6 +1054,7 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fe09::2;
 allow 2605:a140:2262:7686::1;
+allow 2605:a141:2261:4410::1;
 allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
 allow 2605:e440:3::3ef;
@@ -1271,6 +1274,7 @@ allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1:108::b829:eee2;
+allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1508,6 +1512,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:38a0::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1618,6 +1623,7 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
+allow 37.228.129.162;
 allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
@@ -1637,6 +1643,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1692,6 +1699,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
 allow 45.38.20.153;
+allow 45.38.20.181;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.66.35.10;
@@ -1901,7 +1909,6 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.84.133;
-allow 93.113.25.161;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.109.44;
