--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -223,6 +223,7 @@ deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fe09::2;
 deny 2605:a140:2262:7686::1;
+deny 2605:a141:2261:4410::1;
 deny 2605:a142:2263:1906::1;
 deny 2605:aa80:0:9::3;
 deny 2605:e440:3::3ef;
@@ -441,6 +442,7 @@ deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:1:108::b829:eee2;
+deny 2a06:1700:1:109::209:a94;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -678,6 +680,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:38a0::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
