--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -659,6 +659,7 @@ allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:601:1100::26d0;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
@@ -796,6 +797,7 @@ allow 216.73.159.101;
 allow 216.73.159.75;
 allow 216.9.224.232;
 allow 217.12.221.131;
+allow 217.182.75.199;
 allow 220.135.36.173;
 allow 23.129.64.130;
 allow 23.129.64.131;
@@ -919,12 +921,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1502,6 +1505,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:38a0::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1684,6 +1688,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
 allow 45.38.20.153;
+allow 45.38.20.181;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.61.188.15;
