--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -9,6 +9,7 @@ deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::3348;
 deny 2001:41d0:304:200::3ea4;
 deny 2001:41d0:304:200::9dce;
+deny 2001:41d0:601:1100::26d0;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
@@ -666,6 +667,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:38a0::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
