Update lists at 20250907-0601

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -817,9 +817,11 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.4;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1159,6 +1161,7 @@ allow 94.72.104.135;
 allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
+allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 96.8.119.172;
