--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,4 @@
-deny 2001:0:d911:c0d9:1cd3:68d9:a41c:8d66;
+deny 2001:0:d911:c0d9:4:b244:a41c:8d66;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
@@ -668,6 +668,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:38a0::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
