Update lists at 20250907-2101

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -661,6 +661,7 @@ deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
+deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
@@ -743,6 +744,7 @@ deny 2a12:a800:2:1:45:141:215:95;
 deny 2a12:a800:2:1:45:141:215:97;
 deny 2a12:a800:2:1:45:80:158:167;
 deny 2a12:a800:2:1:45:80:158:27;
+deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:2:1:45:80:158:75;
 deny 2a12:a800:2:1:45:80:158:93;
 deny 2a12:a800:8:1:45:94:31:68;
