--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -893,6 +893,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -921,9 +922,6 @@ allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1496,6 +1494,7 @@ allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
+allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
@@ -1578,6 +1577,7 @@ allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:27;
+allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:2:1:45:80:158:75;
 allow 2a12:a800:2:1:45:80:158:93;
 allow 2a12:a800:8:1:45:94:31:68;
@@ -1597,7 +1597,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1628,6 +1627,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1699,6 +1699,7 @@ allow 45.66.35.35;
 allow 45.79.144.222;
 allow 45.80.158.167;
 allow 45.80.158.27;
+allow 45.80.158.69;
 allow 45.80.158.75;
 allow 45.80.158.93;
 allow 45.83.104.137;
@@ -1724,6 +1725,7 @@ allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
+allow 45.9.156.161;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.102;
