--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -893,6 +893,7 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
+deny 23.137.253.113;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
@@ -921,9 +922,6 @@ deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
-deny 23.191.200.30;
-deny 23.191.200.4;
-deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -1496,6 +1494,7 @@ deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
+deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
@@ -1578,6 +1577,7 @@ deny 2a12:a800:2:1:45:141:215:95;
 deny 2a12:a800:2:1:45:141:215:97;
 deny 2a12:a800:2:1:45:80:158:167;
 deny 2a12:a800:2:1:45:80:158:27;
+deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:2:1:45:80:158:75;
 deny 2a12:a800:2:1:45:80:158:93;
 deny 2a12:a800:8:1:45:94:31:68;
@@ -1597,7 +1597,6 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.40.204.206;
 deny 31.44.238.25;
 deny 35.0.127.52;
@@ -1628,6 +1627,7 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
+deny 38.242.254.131;
 deny 38.60.250.79;
 deny 38.97.116.242;
 deny 38.97.116.243;
@@ -1699,6 +1699,7 @@ deny 45.66.35.35;
 deny 45.79.144.222;
 deny 45.80.158.167;
 deny 45.80.158.27;
+deny 45.80.158.69;
 deny 45.80.158.75;
 deny 45.80.158.93;
 deny 45.83.104.137;
@@ -1724,6 +1725,7 @@ deny 45.88.186.92;
 deny 45.91.250.107;
 deny 45.9.148.50;
 deny 45.9.156.101;
+deny 45.9.156.161;
 deny 45.9.168.192;
 deny 45.94.31.68;
 deny 45.95.169.102;
