Update lists at 20250909-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -210,7 +210,6 @@ allow 176.9.3.9;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
-allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
 allow 178.175.148.209;
@@ -598,6 +597,7 @@ allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.20.19.231;
 allow 195.246.231.197;
 allow 195.47.238.176;
 allow 195.47.238.177;
@@ -669,6 +669,7 @@ allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:67c:2044:1905::26;
+allow 2001:67c:2044:c141:0:1:6431:1;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -909,7 +910,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -918,12 +918,9 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1164,7 +1161,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:74a0:e000:1003::114;
@@ -1443,6 +1439,7 @@ allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
+allow 2a0c:b641:3a1:1005::5a;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1494,6 +1491,9 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
+allow 2a0f:85c1:356:231b::1;
+allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1589,7 +1589,9 @@ allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.133.0.235;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1620,7 +1622,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1675,6 +1676,8 @@ allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
+allow 45.38.20.123;
+allow 45.38.20.153;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.61.188.15;
@@ -1788,6 +1791,7 @@ allow 64.190.76.4;
 allow 64.94.85.248;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
