--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -210,7 +210,6 @@ deny 176.9.3.9;
 deny 176.97.114.202;
 deny 177.93.140.66;
 deny 178.17.170.144;
-deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.164;
 deny 178.175.148.209;
@@ -598,6 +597,7 @@ deny 194.87.55.98;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
+deny 195.20.19.231;
 deny 195.246.231.197;
 deny 195.47.238.176;
 deny 195.47.238.177;
@@ -669,6 +669,7 @@ deny 2001:4b20:12:f001::105;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
 deny 2001:67c:2044:1905::26;
+deny 2001:67c:2044:c141:0:1:6431:1;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -909,7 +910,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -918,12 +918,9 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
-deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
 deny 23.191.200.4;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1164,7 +1161,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
-deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:74a0:e000:1003::114;
@@ -1443,6 +1439,7 @@ deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
+deny 2a0c:b641:3a1:1005::5a;
 deny 2a0c:e300:b:b::b;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
 deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1494,6 +1491,9 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
+deny 2a0f:85c1:356:231b::1;
+deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1589,7 +1589,9 @@ deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
+deny 31.133.0.235;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.40.204.206;
 deny 31.44.238.25;
 deny 35.0.127.52;
@@ -1620,7 +1622,6 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
-deny 38.242.254.131;
 deny 38.60.250.79;
 deny 38.97.116.242;
 deny 38.97.116.243;
@@ -1675,6 +1676,8 @@ deny 45.143.200.32;
 deny 45.145.93.133;
 deny 45.148.10.111;
 deny 45.154.98.33;
+deny 45.38.20.123;
+deny 45.38.20.153;
 deny 45.58.190.74;
 deny 45.61.185.172;
 deny 45.61.188.15;
@@ -1788,6 +1791,7 @@ deny 64.190.76.4;
 deny 64.94.85.248;
 deny 66.146.193.33;
 deny 66.220.242.222;
+deny 66.78.40.182;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
