Update lists at 20250909-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -10,7 +10,6 @@ allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
 allow 103.251.167.10;
-allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 103.91.65.44;
@@ -117,6 +116,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
+allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -138,8 +138,6 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.205.129.174;
 allow 154.26.159.157;
-allow 154.41.95.1;
-allow 154.41.95.2;
 allow 154.53.58.161;
 allow 158.174.210.51;
 allow 160.119.249.240;
@@ -204,7 +202,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.65.151.192;
-allow 176.65.151.193;
 allow 176.65.151.194;
 allow 176.9.3.9;
 allow 176.97.114.202;
@@ -617,7 +614,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
-allow 198.167.206.136;
+allow 198.167.206.246;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -658,6 +655,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:801:2000::2b97;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
@@ -747,6 +745,8 @@ allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.182.99.129;
+allow 203.55.81.1;
+allow 203.55.81.2;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -920,12 +920,7 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1176,7 +1171,6 @@ allow 2a01:4f8:141:3305::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
@@ -1187,8 +1181,6 @@ allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2261:2270::1;
 allow 2a02:c204:2263:5153::1;
-allow 2a02:c207:2277:1002::1;
-allow 2a02:c207:2277:1003::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1234,7 +1226,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1596,6 +1587,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1613,8 +1605,6 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
-allow 37.60.232.250;
-allow 37.60.234.89;
 allow 37.77.56.238;
 allow 38.135.24.30;
 allow 38.135.24.31;
@@ -1626,7 +1616,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1731,6 +1720,7 @@ allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
+allow 46.165.193.207;
 allow 46.165.243.36;
 allow 46.183.217.240;
 allow 46.232.251.191;
@@ -1750,7 +1740,6 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
