--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -15,6 +15,7 @@ deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
+deny 2001:41d0:701:1100::57d3;
 deny 2001:41d0:801:2000::2b97;
 deny 2001:41d0:805:d300::2b19:1929;
 deny 2001:41d0:a:5c0::1;
@@ -342,7 +343,6 @@ deny 2a01:4f8:141:3305::2;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
-deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
@@ -353,8 +353,6 @@ deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2261:2270::1;
 deny 2a02:c204:2263:5153::1;
-deny 2a02:c207:2277:1002::1;
-deny 2a02:c207:2277:1003::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -400,7 +398,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
