Update lists at 20250909-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -77,7 +77,6 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.228.160.190;
 allow 109.237.27.11;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -202,11 +201,13 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.65.151.192;
+allow 176.65.151.193;
 allow 176.65.151.194;
 allow 176.9.3.9;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
+allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
 allow 178.175.148.209;
@@ -219,6 +220,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.29.72.161;
 allow 179.250.80.161;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -271,7 +273,6 @@ allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.14.31.113;
 allow 185.150.28.13;
-allow 185.153.198.65;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.156.72.7;
@@ -920,7 +921,12 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1161,6 +1167,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:74a0:e000:1003::114;
@@ -1631,7 +1638,6 @@ allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
-allow 45.135.180.154;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
