--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -221,6 +221,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.30.84.201;
 allow 179.250.80.161;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -489,6 +490,7 @@ allow 185.40.4.22;
 allow 185.40.4.29;
 allow 185.40.4.38;
 allow 185.40.4.44;
+allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.42.170.203;
 allow 185.56.171.94;
@@ -920,9 +922,12 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1230,7 +1235,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1468,6 +1472,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
+allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
@@ -1508,6 +1513,7 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
+allow 2a10:2f00:167::1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1536,8 +1542,10 @@ allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:185:241:208:82;
+allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
+allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
 allow 2a12:a800:2:1:45:138:16:239;
@@ -1582,14 +1590,12 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
-allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1618,13 +1624,13 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
 allow 43.160.194.14;
-allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1636,8 +1642,10 @@ allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
+allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
+allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
 allow 45.138.16.239;
@@ -1709,6 +1717,7 @@ allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
+allow 45.9.156.161;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
@@ -1716,9 +1725,9 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
-allow 46.194.233.0;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.246.92.51;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.38.243.210;
@@ -1734,7 +1743,6 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1794,6 +1802,7 @@ allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
+allow 77.72.85.206;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.153.150.25;
@@ -1814,7 +1823,6 @@ allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.221.131.86;
 allow 82.221.139.190;
 allow 8.222.227.10;
 allow 82.29.128.145;
@@ -1826,6 +1834,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
 allow 84.239.46.144;
+allow 85.202.203.1;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 85.93.31.31;
